kubernetes/bases/transmission/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transmission
spec:
  selector:
    app: transmission
  ports:
  - port: 80
    targetPort: 9091
  type: ClusterIP
