kubernetes/bases/transmission/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transmission
  labels:
    name: transmission
spec:
  rules:
  - host: __PATCH__
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: transmission
            port: 
              number: 80
  tls:
  - hosts: []
    secretName: transmission-tls
